# GnX

./: Cargo.toml  README.md
.github/workflows/: Deploy.yml  deployment.yml
src/: bin.rs  lib.rs
src/prelude/: individual.rs  mod.rs
src/prelude/solvers/: wrapper.rs
