[package]
name = "GenX"
version = "0.1.0"
authors = ["guyarieli17@yahoo.com"]
edition = "2021"
description = "Genetic Algorithm🧬, package for Rust🦀 & Python"
readme = "README.md"
repository = "https://github.com/dev0Guy/GenX"
license = "MIT"

exclude = [
    "public/*",
]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "GenX"
path ="src/lib.rs"

[dependencies]
ordered-float = "3.0.0"

[[bin]]
name = "GenX"
path = "src/bin.rs"
